--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: [Go Geddes Go]
-description: [A QEA-Inspired Video Game]
+description: [A QEA-Inspired Game]
